--- a/fns-hl7-pipeline/fn-mmg-validator/pom.xml
+++ b/fns-hl7-pipeline/fn-mmg-validator/pom.xml
@@ -19,7 +19,8 @@
         <maven.compiler.source>1.11</maven.compiler.source>
         <maven.compiler.target>1.11</maven.compiler.target>
 
-        <functionAppName>ocio-ede-${environment-id}-hl7-mmg-validator</functionAppName>
+        <!--functionAppName>ocio-ede-${environment-id}-hl7-mmg-validator</functionAppName -->
+        <functionAppName>TestMMGValidator</functionAppName>
         <stagingDirectory>${project.build.directory}/azure-functions/${functionAppName}</stagingDirectory>
 
         <slf4j.version>2.0.5</slf4j.version>
@@ -32,9 +33,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.13.10</version>
+        </dependency>
+        <dependency>
             <groupId>gov.cdc.dex</groupId>
             <artifactId>lib-dex-commons</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.12-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>C:\Projects\ACC\afs-data-exchange-hl7\libs\lib-dex-commons-1.0.12-SNAPSHOT.jar</systemPath>
         </dependency>
 
         <!-- Azure Functions Java Library -->
